# bevy_web_drop_image_as_sprite

./: Cargo.toml  README.md  Trunk.toml  index.html  justfile
docs/: bevy_web_drop_image_as_sprite-133345bdc5b4720d.js  bevy_web_drop_image_as_sprite-224087445ae86cb.js  bevy_web_drop_image_as_sprite-48100eaa56c485e1.js  bevy_web_drop_image_as_sprite-9712694e1a89ec90.js  bevy_web_drop_image_as_sprite-ce40d7a83a900500.js  bevy_web_drop_image_as_sprite-dad04df4d486c8ae.js  index.html
src/: main.rs
src/web/: channel.rs  mod.rs  plugin.rs  web.rs
