[package]
name = "bevy_web_drop_image_as_sprite"
version = "0.1.0"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_window",
    "bevy_winit",
    "bevy_sprite",
    "webgl2",
    "png",
] }
bevy_channel_trigger = "0.3.0"

[target.'cfg(target_family = "wasm")'.dependencies.gloo]
version = "0.11"
features = ["utils"]

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DragEvent",
]
