[package]
name = "bevy_web_drop_image_as_sprite"
version = "0.1.0"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_window",
    "bevy_winit",
    "bevy_sprite",
    "bevy_render",
    "bevy_sprite_render",
    "bevy_core_pipeline",
    "bevy_log",
    "webgl2",
    "png",
] }
bevy_channel_trigger = "0.5.0"

[target.'cfg(target_family = "wasm")'.dependencies.gloo]
version = "0.11"
features = ["utils"]

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DragEvent",
]

[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[patch.crates-io]
bevy_channel_trigger = { git="https://github.com/rustunit/bevy_channel_trigger.git", branch="bevy-0.17" }
